# useCamera2Demo

./: README.md  build.gradle  settings.gradle
JLXFaceSDK-V1.0/: Makefile  build.gradle  local.properties
JLXFaceSDK-V1.0/gradle/wrapper/: gradle-wrapper.properties
JLXFaceSDK-V1.0/src/main/: AndroidManifest.xml
JLXFaceSDK-V1.0/src/main/JLXSDK/: CMakeLists.txt
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/Android/jni/: Android.mk  jni_classify.cpp  jni_detect.cpp  jni_util.cpp
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/Android/jni/include/: jni_classify.hpp  jni_detect.hpp  jni_jlx_util.hpp
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/Sample/: Classify.cpp  JLXCnnService.cpp  JLXDir.cpp  JLXFace.cpp  JLXFacePredict.cpp  JLXFaceid.cpp  JLXsqlite3.cpp  Sample.cpp  TensorflowModels.cpp  desfile.cpp  makefile
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/Sample/include/: Classify.hpp  JLXDefine.hpp  JLXDevice.hpp  JLXsqlite3.hpp  Samples.hpp  TensorflowModels.hpp  desfile.hpp
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/facedetect/: CMakeCache.txt  CMakeLists.txt  build.gradle
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/facedetect/src/androidTest/java/com/jenkolux/facedetect/: ExampleInstrumentedTest.java
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/facedetect/src/main/: AndroidManifest.xml
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/facedetect/src/main/cpp/: mtcnn.cpp  mtcnn.h
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/facedetect/src/test/java/com/jenkolux/facedetect/: ExampleUnitTest.java
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/: CMakeLists.txt  build.gradle
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/src/androidTest/java/com/jenkolux/filessl/: ExampleInstrumentedTest.java
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/src/main/: AndroidManifest.xml
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/src/main/cpp/: jni_ssl.cpp  verify.cpp  verify.hpp
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/src/main/res/values/: strings.xml
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/filessl/src/test/java/com/jenkolux/filessl/: ExampleUnitTest.java
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/sqlite3so/jni/: Android.mk
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/: CMakeLists.txt  tf_exported_symbols.lds
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/examples/android/: build.gradle
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/: JlxTensorflow.cc  JlxTensorflow.h  arena_planner_test.cc  graph_info_test.cc  model.h
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/examples/android/: build.gradle  local.properties
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/tools/make/: Makefile
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/tools/make/downloads/flatbuffers/: CMakeLists.txt
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/tools/make/downloads/flatbuffers/android/: build.gradle
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/tools/make/downloads/flatbuffers/samples/android/: build.gradle
JLXFaceSDK-V1.0/src/main/JLXSDK/Samples/tensorflow/lite/tools/make/downloads/googletest/googletest/include/gtest/: gtest.h
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/alib/user/: activeResult.java  initResult.java  registerResult.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/domain/: FaceData.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/facedetect/: StartEngineTask.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/facedetect/data/: JlxBox.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/filessl/: FileUtil.java  JlxEncrypt.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/lib/: FaceDet.java  JLXPersonInfo.java  JLXRect.java  JlxRegisterInfo.java  JlxUser.java  PedestrianDet.java  VisionDetRet.java
JLXFaceSDK-V1.0/src/main/java/com/jenkolux/util/: DeviceIdUtil.java  JlxScreenUtil.java  UsbDeviceUtil.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/commom/: Constants.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/face/: FaceService.java  InitAiEngine.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/ffmpeg/: VideoService.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/helps/: FaceHelper.java  Networks.java  SQLiteDbHelper.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/https/: FaceUpLoader.java  HttpCommonInterceptor.java  RetrofitServiceManager.java  UpLoadImageInterface.java  UpLoader.java  UploadFile.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/status/: JLXMethodBox.java  JLXNetStatusBox.java  JlxCameraBox.java  JlxErrorBox.java  JlxStatusBox.java  JlxTaskBox.java
JLXFaceSDK-V1.0/src/main/java/com/jlx/utils/: ContentUriUtil.java  Convert.java  ImageUtils.java  KeyCodeUtil.java  NV21ToBitmap.java  RootCmdUtils.java  Similar.java  USBUtils.java
JLXFaceSDK-V1.0/src/main/res/xml/: file_paths.xml
app/: build.gradle
app/src/androidTest/java/com/jenkolux/camerademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jenkolux/camerademo/camera2/: Camera2Helper.java  Camera2Listener.java  DetectAnsyTask.java  ShowAnsyTask.java
app/src/main/java/com/jenkolux/camerademo/camera2/activity/: BorderImageView.java  MainActivity.java
app/src/main/java/com/jenkolux/camerademo/camera2/util/: ImageUtil.java
app/src/main/res/layout/: activity_camera2.xml
app/src/test/java/com/jenkolux/camerademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
